--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-title>INFO COVID-19</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,5 +11,60 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <!-- <app-explore-container name="Tab 1 page"></app-explore-container> -->
+  <h4 class="ion-text-center">Jumlah Kasus di Indonesia Saat Ini</h4>
+  <ion-grid>
+    <ion-row *ngIf="countryid">
+        <ion-col style="background:#3dc2ff" class="ion-text-center">
+          <h1>{{countryid['confirmed']['value']}}</h1>
+          <p>Confirmed</p>
+        </ion-col>
+        <ion-col style="background:#2dd36f" class="ion-text-center">
+          <h1>{{countryid['recovered']['value']}}</h1>
+          <p>Recovered</p>
+        </ion-col>
+        <ion-col style="background:#eb445a" class="ion-text-center">
+          <h1>{{countryid['deaths']['value']}}</h1>
+          <p>Deaths</p>
+        </ion-col>
+    </ion-row>
+    <p>Pembaruan Terakhir: {{countryid['lastUpdate'] | date: 'short'}}</p>
+  </ion-grid>
+  
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <div>Negara</div>
+      </ion-col>
+      <ion-col class="ion-text-center">
+        <div>Confirmed</div>
+      </ion-col>
+      <ion-col class="ion-text-center">
+        <div>Recovered</div>
+      </ion-col>
+      <ion-col class="ion-text-center">
+        <div>Deaths</div>
+      </ion-col>
+    </ion-row>
+    
+    <!-- <ion-card> -->
+      <!-- <ion-card-content> -->
+        <ion-row *ngFor="let data of countryall">
+          <ion-col>
+            <div><span *ngIf="data.provinceState">{{data.provinceState}},</span> {{data.countryRegion}}</div>
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <div>{{data.confirmed | number}}</div>
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <div>{{data.recovered | number}}</div>
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <div>{{data.deaths | number}}</div>
+          </ion-col>
+        </ion-row>
+      <!-- </ion-card-content> -->
+    <!-- </ion-card> -->
+   
+  </ion-grid>
 </ion-content>
