--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,3 +1,13 @@
 ion-content ion-toolbar {
   --background: translucent;
 }
+
+ion-row {
+  padding: 0px 10px;
+}
+ion-col {
+  margin-right: 10px;
+}
+ion-col:last-child {
+  margin-right: 0px;
+}
