--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,33 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <!-- <app-explore-container name="Tab 1 page"></app-explore-container> -->
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm>
+        <ion-card>
+          <ion-card-content>
+            <h1>1,252</h1>
+            <p>POSITIF</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size-sm>
+        <ion-card>
+          <ion-card-content>
+            <h1>64</h1>
+            <p>SEMBUH</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size-sm>
+        <ion-card>
+          <ion-card-content>
+            <h1>114</h1>
+            <p>MENINGGAL</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
