--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,12 +2,16 @@ ion-content ion-toolbar {
   --background: translucent;
 }
 
+
+
+.header ion-col {
+  background-color: #f7f7f7;
+}
+
 ion-row {
   padding: 0px 10px;
 }
 ion-col {
-  // margin-right: 10px;
-  background-color: #f7f7f7;
   border: solid 1px #ddd;
   padding: 5px;
 }
